--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">ChitShat</string>
+
+    <string name="display_name_text">Display name</string>
+
+    <string name="btn_go_text">Go!</string>
 </resources>
