--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="invitation_title">Friendly Chat Invite</string>
     <string name="btn_google_sign_in">Sign In</string>
     <string name="btn_anonymous_sign_in">Anonymous sign in</string>
-    <string name="btn_settings">Settings</string>
+    <string name="settings">Settings</string>
     <string name="welcome_msg">Welcome!</string>
     <string name="sign_out">Sign Out</string>
     <string name="contacts_permission_rationale">Access to account information is required to sign in.</string>
